@startuml

title __ADAPTER's Class Diagram__\n

  namespace com.yyzy.constellation {
    namespace tally {
      namespace adapter {
        class com.yyzy.constellation.tally.adapter.CalendarAdapter {
            + selPos : int
            + year : int
            - context : Context
            - mData : List<String>
            + CalendarAdapter()
            + getCount()
            + getItem()
            + getItemId()
            + getView()
            + setYear()
            - loadDatas()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace tally {
      namespace adapter {
        class com.yyzy.constellation.tally.adapter.ChartLvItemAdapter {
            - context : Context
            - mData : List<ChartLvItemBean>
            + ChartLvItemAdapter()
            + getCount()
            + getItem()
            + getItemId()
            + getView()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace tally {
      namespace adapter {
        class com.yyzy.constellation.tally.adapter.ChartLvItemAdapter.ViewHolder {
            ~ img : ImageView
            ~ tvRatio : TextView
            ~ tvSumMoney : TextView
            ~ tvType : TextView
            ~ ViewHolder()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace tally {
      namespace adapter {
        class com.yyzy.constellation.tally.adapter.ChartVpAdapter {
            - fragmentList : List<Fragment>
            + ChartVpAdapter()
            + getCount()
            + getItem()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace tally {
      namespace adapter {
        class com.yyzy.constellation.tally.adapter.GvTypeAdapter {
            + selectPos : int
            - context : Context
            - mData : List<GvTypeBean>
            + GvTypeAdapter()
            + getCount()
            + getItem()
            + getItemId()
            + getView()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace tally {
      namespace adapter {
        class com.yyzy.constellation.tally.adapter.ReCordPagerAdapter {
            ~ titles : String[]
            - fragmentList : List<Fragment>
            + ReCordPagerAdapter()
            + getCount()
            + getItem()
            + getPageTitle()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace tally {
      namespace adapter {
        class com.yyzy.constellation.tally.adapter.TallyLVAdapter {
            - context : Context
            - day : int
            - mData : List<TallyLvItemBean>
            - month : int
            - year : int
            + TallyLVAdapter()
            + getCount()
            + getItem()
            + getItemId()
            + getView()
        }
      }
    }
  }
  

  namespace com.yyzy.constellation {
    namespace tally {
      namespace adapter {
        class com.yyzy.constellation.tally.adapter.TallyLVAdapter.ViewHolder {
            ~ imgTitle : ImageView
            ~ tvBeizhu : TextView
            ~ tvMoney : TextView
            ~ tvOutOrIn : TextView
            ~ tvTime : TextView
            ~ tvTitle : TextView
            + ViewHolder()
        }
      }
    }
  }
  

  com.yyzy.constellation.tally.adapter.CalendarAdapter -up-|> android.widget.BaseAdapter
  com.yyzy.constellation.tally.adapter.ChartLvItemAdapter -up-|> android.widget.BaseAdapter
  com.yyzy.constellation.tally.adapter.ChartLvItemAdapter +-down- com.yyzy.constellation.tally.adapter.ChartLvItemAdapter.ViewHolder
  com.yyzy.constellation.tally.adapter.ChartVpAdapter -up-|> androidx.fragment.app.FragmentStatePagerAdapter
  com.yyzy.constellation.tally.adapter.GvTypeAdapter -up-|> android.widget.BaseAdapter
  com.yyzy.constellation.tally.adapter.ReCordPagerAdapter -up-|> androidx.fragment.app.FragmentStatePagerAdapter
  com.yyzy.constellation.tally.adapter.TallyLVAdapter -up-|> android.widget.BaseAdapter
  com.yyzy.constellation.tally.adapter.TallyLVAdapter +-down- com.yyzy.constellation.tally.adapter.TallyLVAdapter.ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
